# MobilityGPT

./: .gitignore  DP_traj_generate.py  Evaluate_TS-TrajGen_Porto.py  Evaluate_trajs.py  LICENSE.md  README.md  RL_policy_train.py  TS-TrajGen_Porto.txt  bay_area_cities.geojson  dpo_finetuning.py  evaluate.py  gpt_supervised_finetuning.py  input_MobilityGPT_data.py  input_TS-TrajGen_data.py  input_TS-TrajGen_porto.py  main.py  my_gpt_train.py  out_links_TS-TrajGen_Porto.py  ppo_finetuning.py  pyproject.toml  regions4gravity.py  reward_model_train.py  supervised_finetuning.py
datasets/: __init__.py  char_dataset.py  data_utils.py  pairwise_dataset.py  prompt_dataset.py
finetuners/: base_finetuner.py  dpo_finetuning.py  ppo_finetuning.py  ppo_reward_finetuning.py  ppo_reward_model_train.py  supervised_finetuning.py
mingpt/: model.py  policy_trainer.py  reward_trainer.py  trainer.py
mobilitygpt/: args.py  config.py  config_utils.py  dpo_trainer.py  model.py  policy_trainer.py  ppo_policy_trainer.py  reward_trainer.py  synthetic.py  trainer.py  trainer_utils.py
preprocessing/: DP_traj_generate.py  gravity_based_sampling.py  input_MobilityGPT_data.py  out_links_to_geojson.py
