[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobilitygpt"
version = "0.1.0"
description = "A GPT-based model for mobility trajectory generation with various finetuning methods"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Ammar Haydari", email = "ahaydari@ucdavis.edu"},
]

dependencies = [
    "torch>=1.10.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
    "transformers>=4.15.0",
    "scipy>=1.7.0",
    "opacus>=1.0.0",
    "geopandas>=0.10.0",
    "geopy>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
include = ["mobilitygpt*", "finetuners*"]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mobilitygpt"
"Bug Tracker" = "https://github.com/yourusername/mobilitygpt/issues" 